:bug: Fix tag family modal content overflow
Addresses #181

--- a/src/scss/partials/_family-list.scss
+++ b/src/scss/partials/_family-list.scss
@@ -92,6 +92,18 @@
   }
 }
 
+// Tag family modal
+#tag-family {
+  .modal-inner {
+    display: flex;
+    flex-direction: column;
+
+    #family-list {
+      overflow-y: scroll;
+    }
+  }
+}
+
 @include tablet {
   #family-container {
     top: 4.6875em;
